# afar-prgenv

./: .gitignore  .modules  .modulestest  LICENSE  README.md
afar_modules/: README.md
afar_modules/config/: afar-root.lua  afar-versions.txt  cray-mpich-dir.txt  wrapper-filter.txt  wrapper-unsupported-flags.txt
afar_modules/docs/: admin-handoff.md  architecture.md  documentation-plan.md  module-generation.md  mpich.md  pkgconfig.md  testing.md  troubleshooting.md  user-guide.md  wrappers.md
afar_modules/pkgconfig/: rocm-afar-001-400.pc  rocm-afar-001-732.pc  rocm-afar-22.1.0-8705.pc  rocm-afar-22.1.1-8705.pc  rocm-afar-22.3.0-10004.pc  rocm-afar-3301.pc  rocm-afar-4.1.0-6356.pc  rocm-afar-4224.pc  rocm-afar-5891.pc  rocm-afar-6.0.0-7450.pc  rocm-afar-6.1.0-7702.pc  rocm-afar-7.0.5-1-8248.pc  rocm-afar-7.1.0-8473.pc
afar_modules/scripts/: generate_afar_modules.sh  generate_pkgconfig_shims.sh
paper/: Makefile  afar-prgenv.tex  afar-prvenv.bib  hust-cfp.txt
paper/src/: abstract.tex  background.tex  conclusion.tex  design.tex  discussion.tex  evaluation.tex  experimental-setup.tex  fig-architecture.tex  fig-pkgconfig-flow.tex  fig-repro-summary.tex  fig-workflow.tex  implementation.tex  introduction.tex  motivation.tex  operations.tex  related-work.tex  test-harness.tex  workflow.tex
repro/cmake-mpi-omp/: CMakeLists.txt  README.md  build.sh  hello.c  hello.f90
scripts/: build_paper.sh  check_ldd.sh  run_afar_tests.sh
test/: .modules  .mpitestmodules  .testmpi  fomp_test  hello  hello.f90  omp_test  omp_test.f90  output.txt  program  program.f90
(+148 files in other folders)
